testsuite/tests/rename/should_fail/ConflictingInlinePragmas0.hs
module ConflictingInlinePragmas0 where

{-# INLINE f #-}
f :: Int -> Int
f x
  = x
{-# NOINLINE f #-}
